@@ -1,3 +1,10 @@
+2002-05-10  Jim Blandy  <jimb@redhat.com>
+
+	* gdb.base/printcmds.exp (test_integer_literals_rejected):
+	Recognize more detailed error message produced by the macro
+	expander's lexical analyzer.
+	* lib/gdb.exp (test_print_reject): Same.
+
 2002-05-06  Ben Elliston  <bje@redhat.com>
 From Graydon Hoare  <graydon@redhat.com>
 
